RESOLVED FIXED160156
[Coordinated Graphics] ASSERTION FAILED: m_coordinator->isFlushingLayerChanges() in fast/repaint/animation-after-layer-scroll.html
https://bugs.webkit.org/show_bug.cgi?id=160156
Summary [Coordinated Graphics] ASSERTION FAILED: m_coordinator->isFlushingLayerChange...
Carlos Garcia Campos
Reported 2016-07-25 00:16:15 PDT
So, we fixed an assertion in r203663, but now is hitting the next one. As explained in bug #160142, flush compositing state can be triggered in tests by RenderLayerCompositor::layerTreeAsText(), without the coordinator even noticing it, so the assert can be just removed.
Attachments
Patch (2.03 KB, patch)
2016-07-25 00:19 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-07-25 00:19:29 PDT
Carlos Garcia Campos
Comment 2 2016-07-25 08:02:15 PDT
Note You need to log in before you can comment on or make changes to this bug.